# lead_test_1

./: .gitlab-ci.yml  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
answers/: 01_audit_and_strategy.md  02_automation_and_ci.md  03_idempotency_concurrency.md  04_people_and_process.md
framework/adapters/: base.py  matrix_api.py  ui.py
framework/controllers/: network.py  session.py
framework/fixtures/: api.py  ui.py
framework/models/: message.py  room.py  user.py
tests/api/: test_idempotency.py
tests/e2e/: test_send_message.py
