[project]
name = "matrix-qa-framework"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "pytest-rerunfailures>=13.0",
    "pytest-timeout>=2.3",
    "pytest-html>=4.0",
    "httpx>=0.27",
    "playwright>=1.44",
    "python-dotenv>=1.0",
]

[dependency-groups]
lint = [
    "flake8>=7.0",
    "mypy>=1.10",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
markers = [
    "e2e: end-to-end тесты через браузер",
    "api: тесты через Matrix API",
    "smoke: быстрые проверки критических сценариев",
    "flaky: нестабильные тесты (в карантине)",
]
